# banknote_sensor

./: CMakeLists.txt  README.md  prj.conf  west.yml
include/: monitoring.h  processing.h  sample_queue.h  sensor_handler.h  sensor_sim.h  types.h
src/: main.c  monitoring.c  processing.c  sample_queue.c  sensor_handler.c  sensor_sim.c
